# rust-bridge-scorecard-api

./: .Dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  log.txt
backend/: Cargo.toml  Dockerfile  diesel.toml  docker-compose.yml
backend/Docker/: db.Dockerfile  init-database.sh  init.sql
backend/configuration/: base.yaml  local.yaml  production.yaml  staging.yaml
backend/migrations/: 20241116210730_users_table.sql  20241207170526_add_username_to_users.sql
backend/migrations/2025-01-16-022038_create_sessions/: down.sql  up.sql
backend/mongo2postgres/: export.sh  roles.local.csv  roles.staging.csv  sessions.local.csv  sessions.staging.csv  users.local.csv  users.staging.csv
backend/src/: configuration.rs  db.rs  error.rs  lib.rs  main.rs  schema.rs  startup.rs  state.rs  telemetry.rs
backend/src/auth/: jwt.rs  login.rs  logout.rs  mod.rs  salt.rs
backend/src/config/: db.rs  logging.rs  mod.rs  networking.rs
backend/src/graphql/: user.rs
backend/src/middlewares/: lookup_user.rs  mod.rs  request_id.rs  verify_jwt.rs
backend/src/middlewares/auth/: lookup_user.rs  mod.rs  session_owner_guard.rs  verify_jwt.rs
backend/src/models/: mod.rs  scoring_type.rs  session.rs  user.rs
backend/src/web/: mod.rs  routes_graphql.rs  routes_hello.rs  routes_login.rs  routes_logout.rs  routes_session.rs  routes_user.rs  routes_user_session.rs
