[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
axum = {version = "0.7.4"}
bcrypt = {version="0.15.0", features=["alloc"]}
bson = "2.7.0"
chrono = "0.4.31"
config = "0.14.0"
dotenv = "0.15.0"
jsonwebtoken = "9.1.0"
mongodb = {version="2.7.1", features=["tracing-unstable"]}
secrecy = { version = "0.8.0", features = ["serde"] }
serde = {version = "1.0.196", features = ["derive"]}
serde-aux = "4.5.0"

serde_json = "1.0.108"
thiserror = "1.0.51"
tokio = {version = "1.34.0", features = ["full"]}
tokio-stream = "0.1.14"
tower = "0.4.13"
tower-http ={ version="0.5.1", features = ["full"]}
tracing = {version="0.1.40"}#, features = ["trace"]}
tracing-bunyan-formatter = "0.3.9"
tracing-core = "0.1.32"
tracing-log = "0.2.0"
tracing-subscriber ={ version = "0.3.18", features = ["json", "env-filter"] }
