[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-graphql = {version="7.0.15", features=["bson","chrono","tracing","url","uuid", "graphiql", ]}
async-graphql-axum = "7.0.15"
axum = {version = "0.8.3", features=["macros"]}
base64 = "0.22.1"
bcrypt = {version="0.17.0", features=["alloc"]}
bson = "2.14.0"
chrono = "0.4.40"
config = "0.15.11"
dotenv = "0.15.0"
futures = "0.3.30"
jsonwebtoken = "9.3.0"
mongodb = {version="3.0.1", features=["tracing-unstable"]}
rand = {version="0.8.5", features=["std_rng"]}
secrecy = { version = "0.8.0", features = ["serde"] }
serde = {version = "1.0.219", features = ["derive"]}
serde-aux = "4.5.0"

serde_json = "1.0.140"
thiserror = "1.0.61"
tokio = {version = "1.38.0", features = ["full"]}
tokio-stream = "0.1.15"
tower = "0.5.2"
tower-http ={ version="0.6.2", features = ["full"]}
tracing = {version="0.1.41"}#, features = ["trace"]}
tracing-bunyan-formatter = "0.3.9"
tracing-core = "0.1.33"
tracing-log = "0.2.0"
time = "0.3.41"
tracing-subscriber ={ version = "0.3.18", features = ["json", "env-filter"] }
uuid = {version = "1.16.0", features = ["serde", "v7"]}
